refact: federation system - DOES NOT COMPILE